[metadata]
name = aiuti
description = Personal collection of assorted helpers and utilities
long_description = file: README.rst
author = Roger Aiudi
author_email = aiudirog@gmail.com
url = https://github.com/aiudirog/Aiuti
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    utils
    helpers
    asyncio

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
tests_require =
    pytest
    pytest-asyncio
    requests
    httpx
    lru-dict

[options.packages.find]
exclude =
    tests

[coverage:run]
source = .
include = aiuti/*,*/tests/*
omit = aiuti/_version.py

[coverage:html]
directory = coverage/

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    pass
include = aiuti/*,tests/*
omit = aiuti/_version.py

[tool:pytest]
testpaths = aiuti docs
addopts = --doctest-modules --doctest-glob='*.rst' --ignore-glob='conf.py'
junit_family = xunit1
asyncio_mode = auto

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[flake8]
max-line-length = 80
filename = **.py
exclude = tests,build,dist,venv*,.tox,*.egg*,coverage,docs,versioneer.py

[mypy]
exclude = _version\.py
follow_imports = silent

[tox:tox]
envlist = py37, py38, py39, py310, py311, py312, pypy3

[testenv]
deps = -rrequirements.txt
commands =
    python -m pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = aiuti/_version.py
versionfile_build = aiuti/_version.py
tag_prefix = v
parentdir_prefix = aiuti-
